# geogram

./: .gitignore  CMakeLists.txt
src/examples/exploragram/: CMakeLists.txt
src/examples/exploragram/compute_OTM_simple/: CMakeLists.txt  main.cpp
src/lib/exploragram/optimal_transport/: optimal_transport.cpp  optimal_transport.h  optimal_transport_2d.cpp  optimal_transport_3d.cpp  optimal_transport_on_surface.cpp
src/lib/geogram/NL/: nl.h  nl_api.c
